--- a/wp-content/themes/aviation/scss/custom.scss
+++ b/wp-content/themes/aviation/scss/custom.scss
@@ -176,7 +176,7 @@ body {
     }
 }
 
-::-webkit-scrollbar-track{
+*:not(html):not(body){::-webkit-scrollbar-track{
     -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.5);
     -moz-box-shadow:  inset 0 0 6px rgba(0,0,0,0.5);
     box-shadow:  inset 0 0 6px rgba(0,0,0,0.5);
@@ -196,3 +196,4 @@ body {
     -ms-box-shadow: inset 0 0 6px rgba(0,0,0,0.5);
     background-color: #001658;
   }
+}
